src/objects/SeccionSubseccionConcepto__c.object
<CustomObject>
    <fields>
        <fullName>CatalogoConceptos__c</fullName>
        <label>Catálogo Conceptos</label>
        <referenceTo>CatalogoConceptos__c</referenceTo>
        <relationshipLabel>Secciones - Subsecciones - Conceptos</relationshipLabel>
        <relationshipName>Secciones_Subsecciones_Conceptos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CatalogoSeccion__c</fullName>
        <label>Catálogo Seccion</label>
        <referenceTo>CatalogoSeccion__c</referenceTo>
        <relationshipLabel>Secciones - Subsecciones - Conceptos</relationshipLabel>
        <relationshipName>Secciones_Subsecciones_Conceptos</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CatalogoSubseccion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catálogo Subsección</label>
        <referenceTo>CatalogoSubsecciones__c</referenceTo>
        <relationshipLabel>Secciones - Subsecciones - Conceptos</relationshipLabel>
        <relationshipName>Secciones_Subsecciones_Conceptos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sección - Subsección - Concepto</label>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <columns>CatalogoSeccion__c</columns>
        <columns>CatalogoSubseccion__c</columns>
        <columns>CatalogoConceptos__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>RSSC-{00000}</displayFormat>
        <label>Número de Sección - Subsección - Concept</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secciones - Subsecciones - Conceptos</pluralLabel>
    <recordTypes>
        <fullName>Outbound</fullName>
        <active>true</active>
        <label>Outbound</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>